# accesscontrol_sandbox_manager

./: BUILD.gn  README.md  README_zh.md  bundle.json  sandbox_manager.gni
config/: BUILD.gn
frameworks/common/: BUILD.gn
frameworks/common/include/: parcel_utils.h  sandbox_manager_log.h
frameworks/sandbox_manager/: BUILD.gn
frameworks/sandbox_manager/include/: i_sandbox_manager.h  policy_info.h  policy_info_parcel.h  policy_info_vector_parcel.h  sandboxmanager_service_ipc_interface_code.h
frameworks/sandbox_manager/src/: policy_info_parcel.cpp  policy_info_vector_parcel.cpp
frameworks/test/: BUILD.gn
frameworks/test/unittest/: sandbox_manager_parcel_test.cpp
interfaces/innerkits/sandbox_manager/: BUILD.gn  libsandbox_manager_sdk.map
interfaces/innerkits/sandbox_manager/include/: policy_info.h  sandbox_manager_client.h  sandbox_manager_death_recipient.h  sandbox_manager_err_code.h  sandbox_manager_kit.h  sandbox_manager_load_callback.h  sandbox_manager_proxy.h
interfaces/innerkits/sandbox_manager/src/: sandbox_manager_client.cpp  sandbox_manager_death_recipient.cpp  sandbox_manager_kit.cpp  sandbox_manager_load_callback.cpp  sandbox_manager_proxy.cpp
interfaces/innerkits/sandbox_manager/test/: BUILD.gn
interfaces/innerkits/sandbox_manager/test/unittest/include/: sandbox_manager_kit_test.h
interfaces/innerkits/sandbox_manager/test/unittest/src/: sandbox_manager_kit_coverage_test.cpp  sandbox_manager_kit_test.cpp
services/common/: BUILD.gn
services/common/database/include/: generic_values.h  sqlite_helper.h  statement.h  variant_value.h
services/common/database/src/: generic_values.cpp  sqlite_helper.cpp  statement.cpp  variant_value.cpp
services/sandbox_manager/: BUILD.gn  sandbox_manager_service.cfg  sandbox_manager_service.rc
services/sandbox_manager/main/cpp/include/database/: policy_field_const.h  sandbox_manager_db.h
services/sandbox_manager/main/cpp/include/sensitive/: sandbox_manager_event_subscriber.h
services/sandbox_manager/main/cpp/include/service/: package_uninstall_observer.h  policy_info_manager.h  sandbox_manager_const.h  sandbox_manager_service.h  sandbox_manager_stub.h
services/sandbox_manager/main/cpp/src/database/: policy_field_const.cpp  sandbox_manager_db.cpp
services/sandbox_manager/main/cpp/src/sensitive/: sandbox_manager_event_subscriber.cpp
services/sandbox_manager/main/cpp/src/service/: package_uninstall_observer.cpp  policy_info_manager.cpp  sandbox_manager_service.cpp  sandbox_manager_stub.cpp
services/sandbox_manager/main/sa_profile/: BUILD.gn  sandbox_manager_service.json
services/sandbox_manager/test/: BUILD.gn
services/sandbox_manager/test/mock/include/: sqlite3sym.h
services/sandbox_manager/test/mock/src/: sqlite3sym.cpp  sqlite_mock_test.cpp
services/sandbox_manager/test/unittest/: policy_info_manager_test.cpp  sandbox_manager_db_test.cpp  sandbox_manager_service_test.cpp
test/fuzztest/common/: alloc_token.cpp  alloc_token.h
test/fuzztest/innerkits/sandbox_manager/: BUILD.gn
test/fuzztest/innerkits/sandbox_manager/checkpersistpolicy_fuzzer/: BUILD.gn  checkpersistpolicy_fuzzer.cpp  checkpersistpolicy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/persistpolicy_fuzzer/: BUILD.gn  persistpolicy_fuzzer.cpp  persistpolicy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/persistpolicytoken_fuzzer/: BUILD.gn  persistpolicytoken_fuzzer.cpp  persistpolicytoken_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/setpolicy_fuzzer/: BUILD.gn  setpolicy_fuzzer.cpp  setpolicy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/startaccessingpolicy_fuzzer/: BUILD.gn  startaccessingpolicy_fuzzer.cpp  startaccessingpolicy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/stopaccessingpolicy_fuzzer/: BUILD.gn  stopaccessingpolicy_fuzzer.cpp  stopaccessingpolicy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/unpersistpolicy_fuzzer/: BUILD.gn  unpersistpolicy_fuzzer.cpp  unpersistpolicy_fuzzer.h
test/fuzztest/innerkits/sandbox_manager/unpersistpolicytoken_fuzzer/: BUILD.gn  unpersistpolicytoken_fuzzer.cpp  unpersistpolicytoken_fuzzer.h
test/fuzztest/services/sandbox_manager/: BUILD.gn  sandbox_manager_service_fuzz.gni
test/fuzztest/services/sandbox_manager/checkpersistpolicystub_fuzzer/: BUILD.gn  checkpersistpolicystub_fuzzer.cpp  checkpersistpolicystub_fuzzer.h
test/fuzztest/services/sandbox_manager/persistpolicystub_fuzzer/: BUILD.gn  persistpolicystub_fuzzer.cpp  persistpolicystub_fuzzer.h
test/fuzztest/services/sandbox_manager/persistpolicytokenstub_fuzzer/: BUILD.gn  persistpolicytokenstub_fuzzer.cpp  persistpolicytokenstub_fuzzer.h
test/fuzztest/services/sandbox_manager/setpolicystub_fuzzer/: BUILD.gn  setpolicystub_fuzzer.cpp  setpolicystub_fuzzer.h
test/fuzztest/services/sandbox_manager/startaccessingpolicystub_fuzzer/: BUILD.gn  startaccessingpolicystub_fuzzer.cpp  startaccessingpolicystub_fuzzer.h
test/fuzztest/services/sandbox_manager/stopaccessingpolicystub_fuzzer/: BUILD.gn  stopaccessingpolicystub_fuzzer.cpp  stopaccessingpolicystub_fuzzer.h
test/fuzztest/services/sandbox_manager/unpersistpolicystub_fuzzer/: BUILD.gn  unpersistpolicystub_fuzzer.cpp  unpersistpolicystub_fuzzer.h
test/fuzztest/services/sandbox_manager/unpersistpolicytokenstub_fuzzer/: BUILD.gn  unpersistpolicytokenstub_fuzzer.cpp  unpersistpolicytokenstub_fuzzer.h
