# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../sandbox_manager.gni")

sandbox_manager_service_src = [
  "../main/cpp/src/service/sandbox_manager_service.cpp",
  "../main/cpp/src/service/sandbox_manager_stub.cpp",
  "../main/cpp/src/service/package_uninstall_observer.cpp",
  "../main/cpp/src/service/policy_info_manager.cpp",
  "../main/cpp/src/database/policy_field_const.cpp",
  "../main/cpp/src/database/sandbox_manager_db.cpp",
]

ohos_unittest("libsandbox_manager_service_standard_test") {
  subsystem_name = "accesscontrol"
  part_name = "sandbox_manager"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${sandbox_manager_path}/frameworks/sandbox_manager/include",
    "${sandbox_manager_path}/frameworks/common/include",
    "${sandbox_manager_path}/services/common/database/include",
    "${sandbox_manager_path}/services/sandbox_manager/main/cpp/include/database",
    "${sandbox_manager_path}/services/sandbox_manager/main/cpp/include/service",
    "//third_party/googletest/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//third_party/sqlite/include/",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
  ]

  sources = [
    "unittest/policy_info_manager_test.cpp",
    "unittest/sandbox_manager_db_test.cpp",
    "unittest/sandbox_manager_service_test.cpp",
  ]
  sources += sandbox_manager_service_src

  cflags_cc = [ "-DHILOG_ENABLE" ]

  deps = [
    "${sandbox_manager_path}/frameworks/common:sandbox_manager_common_cxx",
    "${sandbox_manager_path}/frameworks/sandbox_manager:sandbox_manager_communication_adapter_cxx",
    "${sandbox_manager_path}/services/common:sandbox_manager_service_common",
    "${sandbox_manager_path}/services/sandbox_manager:sandbox_manager_service",
    "//third_party/sqlite:sqlite",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":libsandbox_manager_service_standard_test" ]
}
