# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../sandbox_manager.gni")

ohos_unittest("libsandbox_manager_sdk_test") {
  subsystem_name = "accesscontrol"
  part_name = "sandbox_manager"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${sandbox_manager_path}/frameworks/sandbox_manager/include",
    "${sandbox_manager_path}/frameworks/common/include",
    "../include",
    "../src",
    "//third_party/googletest/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "unittest/include",
  ]

  sources = [
    "unittest/src/sandbox_manager_kit_coverage_test.cpp",
    "unittest/src/sandbox_manager_kit_test.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  deps = [
    "${sandbox_manager_path}/frameworks/common:sandbox_manager_common_cxx",
    "${sandbox_manager_path}/frameworks/sandbox_manager:sandbox_manager_communication_adapter_cxx",
    "../:libsandbox_manager_sdk",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":libsandbox_manager_sdk_test" ]
}
